fix: Make description a proper collapse and refine header height and layout spacing (#1139)
@johanneskoester Just as discussed in our meeting - we now always put
the description on top (not overlaying the actual table) and now make
this a proper collapsable div so the table can actually use the full
height of the given window.

--- a/web/style/datavzrd.css
+++ b/web/style/datavzrd.css
@@ -60,10 +60,6 @@
     font-size: 0.8rem;
 }
 
-#table-container {
-    margin-top: 15px;
-}
-
 #histogram-plot {
     width: 100%;
     height: 300px;
@@ -151,7 +147,7 @@ th .th-inner {
 
 #vis-container {
     height: calc(100vh - 105px);
-    padding-top: 60px;
+    padding-top: 50px;
 }
 
 .fa {
@@ -203,6 +199,7 @@ th .th-inner {
 
 .container-fluid {
     overflow: auto;
+    margin-top: 50px;
 }
 
 .dropdown-item {
@@ -254,10 +251,6 @@ footer {
 }
 
 .description-box {
-    position: fixed;
-    left: 0;
-    top: 46px;
-    z-index: 99;
     margin: 0;
 }
 
